--- a/displayimages.css
+++ b/displayimages.css
@@ -2,7 +2,11 @@
 	width : auto;
 	height : 8em;
 }
-img {display: block;}
+img {
+  display: block;
+  margin-left:auto;
+  margin-right:auto;
+}
 span.filename {font-size: small;}
 span.meta_info {display:block; width:100%; text-align:right; font-size:small;}
 a img {border:0pt;}
